--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,201 @@
   padding: 2rem;
   text-align: center;
 }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  background-color: transparent;
+  color: white;
+  z-index: 1000;
+}
+
+.links {
+  display: flex;
+  gap: 25px;
+  margin-top: 35px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out; /* Ajustar el orden de las transiciones */
+  /* visibility: hidden; Removido */
+}
+
+.links.left {
+  margin-right: auto;
+}
+
+.links.right {
+  margin-left: auto;
+}
+
+.links a {
+  color: white;
+  text-decoration: none;
+  position: relative;
+  transition: all 0.5s linear; /* Transición para la transformación de los enlaces */
+  transform: scale(0.8); /* Escala inicial de los enlaces */
+  opacity: 0; /* Ocultamos los enlaces inicialmente */
+}
+
+.links.visible a {
+  opacity: 1; /* Mostramos los enlaces cuando estén visibles */
+  transform: scale(1); /* Escala normal de los enlaces */
+}
+
+.links a::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: white;
+  transition: width 0.3s ease;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+}
+
+.links a:hover::after,
+.links a.active::after {
+  width: 100%;
+}
+
+.links a:hover {
+  color: #FFD700; /* Cambiar a un color dorado en hover */
+  transform: scale(1.1); /* Aumentar el tamaño del enlace */
+}
+
+.links a.enter {
+  transform: scale(1.2); /* Aumentamos el tamaño de los enlaces al entrar */
+}
+
+.links.visible {
+  opacity: 1;
+}
+
+.logo {
+  cursor: pointer;
+  margin-top: 70px; /* Ajusta este valor para separar el logo de la parte superior */
+}
+
+.logo img {
+  width: 90px;
+  height: auto;
+  border: 4px solid yellow;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+}
+
+.logo img:hover {
+  transform: scale(1.1); /* Slightly enlarge the logo */
+  border-color: #4CAF50; /* Green color */
+  box-shadow: 0 0 10px #4CAF50;
+  transition: 0.3s ease-in-out;
+}
+
+.logo img.clicked {
+  filter: hue-rotate(180deg); /* Cambiamos el color del logo al hacer clic */
+}
+
+@keyframes move-background {
+  from {
+		-webkit-transform: translate3d(0px, 0px, 0px);
+	}
+	to { 
+		-webkit-transform: translate3d(1000px, 0px, 0px);
+	}
+}
+@-webkit-keyframes move-background {
+  from {
+		-webkit-transform: translate3d(0px, 0px, 0px);
+	}
+	to { 
+		-webkit-transform: translate3d(1000px, 0px, 0px);
+	}
+}
+
+@-moz-keyframes move-background {    
+	from {
+		-webkit-transform: translate3d(0px, 0px, 0px);
+	}
+	to { 
+		-webkit-transform: translate3d(1000px, 0px, 0px);
+	}
+}
+
+    @-webkit-keyframes move-background {
+	from {
+		-webkit-transform: translate3d(0px, 0px, 0px);
+	}
+	to { 
+		-webkit-transform: translate3d(1000px, 0px, 0px);
+	}
+}
+
+.background-container{
+	position: fixed;
+	top: 0;
+	left:0;
+	bottom: 0;
+	right: 0;
+}
+
+.stars {
+ background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+ position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: block;
+  	z-index: 0;
+}
+
+.twinkling{
+	width:10000px;
+	height: 100%;
+	background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png") repeat;
+	background-size: 1000px 1000px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    
+    -moz-animation:move-background 70s linear infinite;
+  -ms-animation:move-background 70s linear infinite;
+  -o-animation:move-background 70s linear infinite;
+  -webkit-animation:move-background 70s linear infinite;
+  animation:move-background 70s linear infinite;
+	
+}
+
+.clouds{
+	width:10000px;
+	height: 100%;
+	background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
+	background-size: 1000px 1000px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 3;
+
+   -moz-animation:move-background 150s linear infinite;
+  -ms-animation:move-background 150s linear infinite;
+  -o-animation:move-background 150s linear infinite;
+  -webkit-animation:move-background 150s linear infinite;
+  animation:move-background 150s linear infinite;
+}
+.bgImg{
+  height: 70vh;
+  width:70vh;
+  position: absolute;
+  z-index: 3;
+  right: 20px;
+}
