--- a/src/index.css
+++ b/src/index.css
@@ -23,173 +23,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.App {
- 
-  overflow: hidden;
-}
-
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  background-color: transparent;
+h1{
+  z-index: 112234567876543;
   color: white;
-  z-index: 1000;
-}
-.links {
-  display: flex;
-  gap: 25px;
-  margin-top: 35px;
-}
-
-.links.left {
-  margin-right: auto;
-}
-
-.links.right {
-  margin-left: auto;
-}
-
-.links a {
-  color: white;
-  text-decoration: none;
-  transition: opacity 0.3s ease-in-out; /* Aplicar la función ease-in-out aquí */
-}
-
-.links a:hover {
-  opacity: 0.7;
-}
-
-.links.left,
-.links.right {
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out, visibility 0s; /* Ajustar el orden de las transiciones */
-}
-
-.links.visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-.logo {
-  cursor: pointer;
-  margin-top: 70px; /* Ajusta este valor para separar el logo de la parte superior */
-}
-
-.logo img {
-  width: 90px;
-  height: auto;
-  border: 4px solid yellow;
-  border-radius: 50%;
-  transition: 0.3s ease-in-out;
-}
-
-.logo img:hover{
-  box-shadow: 5px 5px 4px gray;
-  transition: 0.3s ease-in-out;
-}
-
-@keyframes move-background {
-  from {
-		-webkit-transform: translate3d(0px, 0px, 0px);
-	}
-	to { 
-		-webkit-transform: translate3d(1000px, 0px, 0px);
-	}
-}
-@-webkit-keyframes move-background {
-  from {
-		-webkit-transform: translate3d(0px, 0px, 0px);
-	}
-	to { 
-		-webkit-transform: translate3d(1000px, 0px, 0px);
-	}
-}
-
-@-moz-keyframes move-background {    
-	from {
-		-webkit-transform: translate3d(0px, 0px, 0px);
-	}
-	to { 
-		-webkit-transform: translate3d(1000px, 0px, 0px);
-	}
-}
-
-    @-webkit-keyframes move-background {
-	from {
-		-webkit-transform: translate3d(0px, 0px, 0px);
-	}
-	to { 
-		-webkit-transform: translate3d(1000px, 0px, 0px);
-	}
-}
-
-.background-container{
-	position: fixed;
-	top: 0;
-	left:0;
-	bottom: 0;
-	right: 0;
-}
-
-.stars {
- background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
- position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	display: block;
-  	z-index: 0;
-}
-
-.twinkling{
-	width:10000px;
-	height: 100%;
-	background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png") repeat;
-	background-size: 1000px 1000px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 2;
-    
-    -moz-animation:move-background 70s linear infinite;
-  -ms-animation:move-background 70s linear infinite;
-  -o-animation:move-background 70s linear infinite;
-  -webkit-animation:move-background 70s linear infinite;
-  animation:move-background 70s linear infinite;
-	
-}
-
-.clouds{
-	width:10000px;
-	height: 100%;
-	background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
-	background-size: 1000px 1000px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 3;
-
-   -moz-animation:move-background 150s linear infinite;
-  -ms-animation:move-background 150s linear infinite;
-  -o-animation:move-background 150s linear infinite;
-  -webkit-animation:move-background 150s linear infinite;
-  animation:move-background 150s linear infinite;
-}
-.bgImg{
-  height: 70vh;
-  width:70vh;
-  position: absolute;
-  z-index: 3;
-  right: 20px;
+  font-size: 900;
 }
