--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 
 *{
   margin: 0;
@@ -14,17 +15,23 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   overflow: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --padding-container: 100px 0;
+  --color-title: #001A49;
+  --font-family: 'Poppins', sans-serif;
 }
 
-h1{
-  z-index: 112234567876543;
-  color: white;
-  font-size: 900;
+section{
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: var(--padding-container);
 }
