--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 *{
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -14,9 +15,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   overflow: hidden;
+  text-decoration: none;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,12 +26,4 @@
   --padding-container: 100px 0;
   --color-title: #001A49;
   --font-family: 'Poppins', sans-serif;
-}
-
-section{
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: var(--padding-container);
 }
